--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,29 @@
 /* TODO Add site wide styles */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1rem;
+}
+
+p {
+  font-size: 1rem;
+}
+
+
 form > .errors {
   color: red;
   font-size: 0.875em;
