--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -2,10 +2,28 @@
     cursor: pointer;
 }
 
+.nav-container {
+    position: sticky;
+    top: 0px;
+    z-index: 100000;
+  }
+
 .navbar {
     display: flex;
-    width: 100%;
     align-items: center;
     justify-content: space-between;
     padding: 1rem;
+    width: 100%;
+    height: 4rem;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: #ff5964;
+    transition: background-color 0.3s;
+}
+
+.nav-auth {
+    display: flex;
+    align-items: center;
+    width: 30%;
 }
