Initial event index UI

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,14 +22,12 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  font-family: 'Inter';
-  font-weight: 400;
+  font-family: 'Lexend', sans-serif;
 }
 
 h3 {
   font-size: 1rem;
-  font-family: 'Inter';
-  font-weight: 400;
+  font-family: 'Lexend', sans-serif;
 }
 
 p {
