Remove events from Events.js routes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,6 @@
 /* TODO Add site wide styles */
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Lexend:wght@700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@700&family=Nunito:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -32,19 +31,19 @@ h3 {
 
 p {
   font-size: 1rem;
-  font-family: 'Inter';
+  font-family: 'Nunito';
   font-weight: 300;
 }
 
 span {
   font-size: 1rem;
-  font-family: 'Inter';
+  font-family: 'Nunito';
   font-weight: 300;
 }
 
 footer {
   font-size: 1rem;
-  font-family: 'Inter';
+  font-family: 'Nunito';
   font-weight: 300;
 }
 
