--- a/frontend/src/components/DiscoverPage/DiscoverPage.css
+++ b/frontend/src/components/DiscoverPage/DiscoverPage.css
@@ -24,15 +24,36 @@
   margin-bottom: 1rem;
 }
 
+.sport-filter-container {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  overflow: hidden;
+}
+.sport-filter-container p {
+  width: auto;
+  background-color: #FF5964;
+  font-size: 0.75rem;
+  padding: 0.5rem;
+  border-radius: 3px;
+  color: black;
+}
 
 .event-container {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  /* border-style: solid; */
-  /* border-width: 2px; */
-  /* border-color: red; */
+  align-items: flex-start;
+  border-style: solid;
+  padding: 1rem;
+  border-width: 1px;
+  border-color: #9c9c9c;
   margin: 0.5rem 0rem;
+  width: 100%;
+  height: 18rem;
+  border-radius: 1rem;
+}
+
+.event-text {
+  width: 80%;
 }
 
 .event-header {
@@ -70,8 +91,14 @@
 }
 
 .event-description {
-  margin: 1rem 0rem;
-  font-family: 'Inter', sans-serif;
-  font-weight: 300;
+  margin: 1rem, 1rem, 1rem, 0rem;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 400;
   font-size: 1rem;
+  width: 90%;
+}
+
+.event-mini-map-container img {
+  height: auto;
+  width: 10rem;
 }
