--- a/frontend/src/components/SessionForms/SignupForm.css
+++ b/frontend/src/components/SessionForms/SignupForm.css
@@ -1,6 +1,16 @@
 .session-form {
-    width: 1000px;
+    width: 50vw;
     max-height: 90vh;
+    border: 2px solid rgba(250,76,76,1);
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.session-form input{
+    margin: 5px;
+    border: 1px solid rgba(250,76,76,1);
+    height: 10%;
+    border-radius: 5px
 }
 
 .sport-option {
@@ -9,6 +19,11 @@
     display: inline-block;
 }
 
+.sport-list-input{
+    /* color: pink; */
+    border-color: pink;
+    /* width: 90%; */
+}
 /* .sport-option button {
     color: pink;
     border-color: pink;
@@ -20,6 +35,6 @@
     color: white;
 } */
 
-.sign-up-back-button {
+#sign-up-back-button {
     width: 100%;
 }
