--- a/frontend/src/components/SessionForms/SignupForm.css
+++ b/frontend/src/components/SessionForms/SignupForm.css
@@ -6,24 +6,62 @@
     padding: 10px;
 }
 
-.session-form input{
-    margin: 5px;
-    border: 1px solid rgba(250,76,76,1);
-    height: 10%;
-    border-radius: 5px
+.primary-sport-div{
+    display: flex;
+    flex-wrap: wrap;
 }
 
+ 
 .sport-option {
-    width: 33%;
-    /* box-sizing: border-box; */
+    /* width: 33%; */
+    box-sizing: border-box;
     display: inline-block;
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid rgba(250,76,76,1);
+    border-radius: 5px;
+} 
+
+.sport-option label{
+    display: flex;
+    flex-direction: row;
+    gap: 5px
 }
 
-.sport-list-input{
-    /* color: pink; */
-    border-color: pink;
+.secondary-sport-list-div{
+    width: inherit;
+    display: flex; 
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+}
+
+.secondary-sport-list-input-label{
+    margin: 5px;
+    padding: 5px;
+    color: rgba(250,76,76,1);
+    border: 1px solid pink;
+    border-radius: 5px;
+    display: flex;
+    /* width: */
+    flex-direction: row;
+    align-items: center;
     /* width: 90%; */
 }
+
+.experience-level-radio-div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-top: 1px solid rgba(250,76,76,1);
+    margin-top: 10px;
+    padding: 10px
+}
+
+.experience-level-radio-div label{
+    /* border */
+}
+
+
 /* .sport-option button {
     color: pink;
     border-color: pink;
