--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,8 @@
 
 html {
   background: radial-gradient(circle, rgba(81,187,254,1) 0%, rgba(250,76,76,1) 100%);
+  /* background: radial-gradient(circle, rgba(81,187,254,0.75) 0%, rgba(250,76,76,0.65) 100%); */
+  /* background: radial-gradient(circle, rgba(250,130,76,0.6838625098476891) 0%, rgba(137,252,0,0.6334423417804622) 100%); */
   /* color: white;  */
 }
 
