--- a/frontend/src/components/DiscoverPage/DiscoverPage.css
+++ b/frontend/src/components/DiscoverPage/DiscoverPage.css
@@ -42,6 +42,16 @@
   border-radius: 3px;
 }
 
+#event-create-button{
+  width: 80%;
+}
+
+#event-create-button:hover{
+  cursor: pointer;
+}
+
+
+
 .event-container {
   display: flex;
   align-items: center;
