--- a/frontend/src/components/EventsShow/EventsShow.css
+++ b/frontend/src/components/EventsShow/EventsShow.css
@@ -1,9 +1,15 @@
 .name-box {
     margin-top: 1.5rem;
-    border: 1px solid black;
     width: 95%;
     margin-left: 2.5%;
-    height: 7.5rem;
+    height: 4rem;
+}
+
+.name-box p{
+    margin-top: 1rem;
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    font-family: 'Lexend', sans-serif;
 }
 
 #event-edit {
@@ -12,29 +18,12 @@
     margin-left: 92%;
 }
 
-/* .main-box {
-    margin-top: 1rem;
-    border: 1px solid black;
+.event-info {
     width: 95%;
     margin-left: 2.5%;
-    height: 80rem;
-    display: flex;
-} */
+}
 
-/* .filter-box {
-    border: 1px solid red;
-    width: 15%;
-} */
-
-/* .index-events {
-    border: 1px solid blue;
-    margin-left: 2.5%;
-    width: 82.5%;
-} */
-
-/* .individual-events {
-    border: 1px solid yellow;
-    height: 12rem;
-    border-radius: 25px;
-    margin-bottom: 1rem;
-} */
+.event-info p{
+    font-size: 1.5rem;
+    font-weight: 400;
+}
