--- a/frontend/src/components/EventForm/EventForm.css
+++ b/frontend/src/components/EventForm/EventForm.css
@@ -84,6 +84,49 @@ input[type=number]{
     box-shadow: 0px 0px 5px rgba(66,66,66,.75);
 }
 
+input[type=time] {
+  border: none;
+  color: #2a2c2d;
+  font-size: 14px;
+  font-family: helvetica;
+  width: 50%
+}
+
+input[type=time]::-webkit-datetime-edit-fields-wrapper {
+  display: flex;
+}
+
+input[type=time]::-webkit-datetime-edit-text {
+  padding: 19px 4px;
+}
+
+input[type=time]::-webkit-datetime-edit-hour-field {
+  background-color: #f2f4f5;
+  border-radius: 15%;
+  padding: 19px 13px;
+}
+
+input[type=time]::-webkit-datetime-edit-minute-field {
+  background-color: #f2f4f5;
+  border-radius: 15%;
+  padding: 19px 13px;
+}
+
+input[type=time]::-webkit-datetime-edit-ampm-field {
+  background-color: #7155d3;
+  border-radius: 15%;
+  color: #fff;
+  padding: 19px 13px;
+}
+
+input[type=time]::-webkit-clear-button {
+  display: none;
+}
+
+input[type=time]::-webkit-inner-spin-button {
+  display: none;
+}
+
 
 
 
