--- a/frontend/src/components/SessionForms/Forms.css
+++ b/frontend/src/components/SessionForms/Forms.css
@@ -1,18 +1,62 @@
-.session-form {
-  background-image: radial-gradient(circle, pink, purple, blue);
-}
-
-.login-form{
-  background-image: radial-gradient(pink, purple, blue);
-  width: 400px;
-  height: 300px;
+.login-form {
+  background: radial-gradient(circle, rgba(137,252,0,0.351707887113764) 0%, rgba(81,187,254,0.7786741792485955) 100%);
+  background: linear-gradient(67deg, rgba(137,252,0,1) 0%, rgba(81,187,254,1) 100%);
+  width: 32rem;
+  height: 18rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 2rem;
+  border-radius: 3rem;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  border-style: none;
 }
 
-.login-form input{
-  border: 1px solid pink;
-  border-radius: 5px;
+.login-form-header {
+  padding: 0.5rem;
+}
+
+.login-form-header h2 {
+  color: #F4FFFD;
+}
+
+.input-field {
+  background-color: transparent;
+  border-style: solid;
+  border-color: #F4FFFD;
+  border-radius: 3rem;
+  height: 2.25rem;
+  width: 12rem;
+  margin: 0.25rem 0rem;
+  /* padding-inline-start: 0.75rem; */
+  padding-left: 0.75rem;
+  font-family: 'Nunito', sans-serif;
+  color: #F4FFFD;
+}
+
+.login-form input[type='submit'].submit-field {
+  /* background-color: transparent; */
+  background: linear-gradient(145deg, rgba(250,130,76,1) 0%, rgba(255,89,100,1) 100%);
+  border-style: none;
+  border-radius: 3rem;
+  width: 8rem;
+  margin: 0.5rem 0rem;
+  /* padding-inline-start: 0.75rem; */
+  font-family: 'Nunito', sans-serif;
+  color: #F4FFFD;
+  padding: 0.5rem;
+  transition: all 0.2s ease-in-out;
+}
+
+input::placeholder {
+  color: #F4FFFD;
+}
+
+.login-form input[type='submit'].submit-field:hover {
+  background: linear-gradient(145deg, rgba(255,89,100,1) 0%, rgba(250,130,76,1) 100%);
+  cursor: pointer;
+  box-shadow: 6px 2px 28px -5px rgba(0,0,0,0.51);
+  -webkit-box-shadow: 6px 2px 28px -5px rgba(0,0,0,0.51);
+  -moz-box-shadow: 6px 2px 28px -5px rgba(0,0,0,0.51);
 }
