--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -6,24 +6,23 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* semi-transparent black overlay */
+  /* background: rgba(0, 0, 0, 0.5); */
+  background: linear-gradient(145deg, rgba(250,130,76,0.75) 0%, rgba(255,89,100,0.75) 100%);
   display: flex;
   align-items: center;
   justify-content: center;
+  filter: ;
 }
 
 .modal-content {
-  background: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   position: relative;
 }
 
 .close-button {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 20px;
+  top: 1rem;
+  right: 2rem;
+  font-size: 1.5rem;
   cursor: pointer;
+  color: #F4FFFD;
 }
