--- a/frontend/src/components/EventsShow/EventsShow.css
+++ b/frontend/src/components/EventsShow/EventsShow.css
@@ -1,7 +1,7 @@
 .name-box {
     margin-top: 1.5rem;
-    width: 95%;
-    margin-left: 2.5%;
+    width: 90%;
+    margin-left: 5%;
     height: 4rem;
 }
 
@@ -10,6 +10,7 @@
     font-size: 3rem;
     margin-bottom: 1rem;
     font-family: 'Lexend', sans-serif;
+    color: white;
 }
 
 #event-edit {
@@ -19,11 +20,43 @@
 }
 
 .event-info {
-    width: 95%;
-    margin-left: 2.5%;
+    width: 90%;
+    margin-left: 5%;
 }
 
 .event-info p{
     font-size: 1.5rem;
     font-weight: 400;
+    margin-bottom: 1rem;
+    color: white;
+}
+
+.attendee-circle {
+    display: inline-block;
+    width: 2.5rem; 
+    height: 2.5rem; 
+    border-radius: 50%;
+    background-color: white;
+    margin-top: 1rem; 
+    margin-right: 1rem;
+  }
+  
+  .attendee-circle:hover {
+    transform: scale(1.2); 
+    transition: transform 0.2s ease;
+  }
+  
+.attendee-circle:hover::before {
+    content: attr(data-name);
+    position: absolute;
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: .25rem;
+    border-radius: .25rem;
+    font-size: 1rem;
+    bottom: 2.75rem;
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    z-index: 999;
 }
