--- a/frontend/src/components/SessionForms/SignupForm.css
+++ b/frontend/src/components/SessionForms/SignupForm.css
@@ -1,10 +1,57 @@
 .signup-form {
+    background-color: aqua;
     width: 32rem;
-    height: 32rem;
-    max-height: 90vh;
-    border: 2px solid rgba(250,76,76,1);
-    border-radius: 5px;
-    padding: 10px;
+    height: 40rem;
+    border-style: none;
+    border-radius: 3rem;
+    padding: 2rem;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.signup-form-header {
+    padding: 0.5rem;
+}
+
+.signup-form-header h2 {
+    color: #F4FFFD;
+}
+
+.signup-form p {
+    font-size: 1rem;
+    color: #F4FFFD;
+    font-family: 'Lexend', sans-serif;
+    font-weight: 400;
+}
+
+.signup-form span {
+    font-size: 1rem;
+    color: #F4FFFD;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
+}
+
+.signup-form input::placeholder {
+    color: black;
+}
+
+.select-field {
+    background-color: transparent;
+    border-style: solid;
+    border-color: #F4FFFD;
+    font-size: 1rem;
+    width: 12rem;
+}
+
+.date {
+    width: 5rem;
+}
+
+.year {
+    width: 6rem;
 }
 
 .primary-sport-div{
