--- a/frontend/src/components/EventForm/EventForm.css
+++ b/frontend/src/components/EventForm/EventForm.css
@@ -36,18 +36,15 @@ label{
     /* margin: 10px */
 }
 
-select{
+select {
     width: 100%;
     margin: 5px;
     padding: 10px;
     font-size: 20px;
-    border-width: 4px;
-    border-color: #ff5964;
-    background-color: #ffffff;
-    color: #000000;
+    border-width: 2px;
     border-style: outset;
     border-radius: 30px;
-    box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+    /* box-shadow: 0px 0px 5px rgba(66,66,66,.75); */
     text-shadow: -50px 0px 0px rgba(66,66,66,.0);
 }
 
