--- a/frontend/src/components/SessionForms/SignupForm.css
+++ b/frontend/src/components/SessionForms/SignupForm.css
@@ -1,5 +1,6 @@
 .signup-form {
-    background-color: aqua;
+    background: radial-gradient(circle, rgba(137,252,0,0.351707887113764) 0%, rgba(81,187,254,0.7786741792485955) 100%);
+    background: linear-gradient(67deg, rgba(137,252,0,1) 0%, rgba(81,187,254,1) 100%);
     width: 32rem;
     height: 40rem;
     border-style: none;
@@ -10,10 +11,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 0.5rem;
 }
 
 .signup-form-header {
     padding: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .signup-form-header h2 {
@@ -35,8 +38,13 @@
 }
 
 .signup-form input::placeholder {
-    color: black;
+    color: #F4FFFD
 }
+
+.select-field, .select-field option {
+    color: #F4FFFD; /* White color */
+}
+
 
 .select-field {
     background-color: transparent;
@@ -123,4 +131,48 @@
 
 #sign-up-back-button {
     width: 100%;
+}
+
+.field-row-container {
+    display: flex;
+    gap: 1rem;
+    margin: 0.5rem 0rem;
+    width: 100%;
+    justify-content: center;
+    height: 4rem;
+}
+
+
+.field-container {
+    display: flex;
+}
+
+.email-field {
+    background-color: transparent;
+    border-style: solid;
+    border-color: #F4FFFD;
+    border-radius: 3rem;
+    height: 2.25rem;
+    width: 25rem;
+    margin: 0.25rem 0rem;
+    /* padding-inline-start: 0.75rem; */
+    padding-left: 0.75rem;
+    font-family: 'Nunito', sans-serif;
+    color: #F4FFFD;
+}
+
+.gender-row-container {
+    display: flex;
+    gap: 1rem;
+    /* width: 100%; */
+}
+
+.gender-option {
+    display: flex;
+    gap: 0.25rem;
+}
+
+.sign-up-gender-field {
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
 }
