--- a/frontend/src/components/SessionForms/LoginForm.css
+++ b/frontend/src/components/SessionForms/LoginForm.css
@@ -1,6 +1,10 @@
 .login-form {
-  background: radial-gradient(circle, rgba(137,252,0,0.351707887113764) 0%, rgba(81,187,254,0.7786741792485955) 100%);
-  background: linear-gradient(67deg, rgba(137,252,0,1) 0%, rgba(81,187,254,1) 100%);
+  /* background: radial-gradient(circle, rgba(137,252,0,0.351707887113764) 0%, rgba(81,187,254,0.7786741792485955) 100%);
+  background: linear-gradient(67deg, rgba(137,252,0,1) 0%, rgba(81,187,254,1) 100%); */
+  /* background: radial-gradient(circle, rgba(137,252,0,0.351707887113764) 0%, rgba(250,130,76,0.7786741792485955) 100%);
+  background: linear-gradient(67deg, rgba(137,252,0,1) 0%, rgba(250,130,76,1) 100%); */
+  background: radial-gradient(circle, rgba(81,187,254,0.351707887113764) 0%, rgba(250,130,76,0.7786741792485955) 100%);
+  background: linear-gradient(67deg, rgba(81,187,254,1) 0%, rgba(250,130,76,1) 100%);
   width: 32rem;
   height: 20rem;
   display: flex;
