--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -7,11 +7,11 @@
   width: 100%;
   height: 100%;
   /* background: rgba(0, 0, 0, 0.5); */
-  background: linear-gradient(145deg, rgba(250,130,76,0.75) 0%, rgba(255,89,100,0.75) 100%);
+  /* background: linear-gradient(145deg, rgba(250,130,76,0.75) 0%, rgba(255,89,100,0.75) 100%); */
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
-  filter: ;
 }
 
 .modal-content {
