--- a/frontend/src/components/SessionForms/LoginForm.css
+++ b/frontend/src/components/SessionForms/LoginForm.css
@@ -1,28 +1,34 @@
 .login-form {
-  /* background: radial-gradient(circle, rgba(137,252,0,0.351707887113764) 0%, rgba(81,187,254,0.7786741792485955) 100%);
-  background: linear-gradient(67deg, rgba(137,252,0,1) 0%, rgba(81,187,254,1) 100%); */
-  /* background: radial-gradient(circle, rgba(137,252,0,0.351707887113764) 0%, rgba(250,130,76,0.7786741792485955) 100%);
-  background: linear-gradient(67deg, rgba(137,252,0,1) 0%, rgba(250,130,76,1) 100%); */
-  background: radial-gradient(circle, rgba(81,187,254,0.351707887113764) 0%, rgba(250,130,76,0.7786741792485955) 100%);
-  background: linear-gradient(67deg, rgba(81,187,254,1) 0%, rgba(250,130,76,1) 100%);
-  width: 32rem;
-  height: 20rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem;
+  /* padding-top: 80%; */
+  /* height: 100%; */
+  width: 100%;
   border-radius: 3rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   border-style: none;
 }
 
+.login-form-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: 50%;
+  bottom: 50%;
+}
+
 .login-form-header {
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
+  margin-bottom: 1rem;
+  white-space: nowrap;
 }
 
 .login-form-header h2 {
   color: #F4FFFD;
+  font-size: 2rem;
+  text-align: center;
 }
 
 .input-field {
@@ -31,7 +37,7 @@
   border-color: #F4FFFD;
   border-radius: 3rem;
   height: 2.25rem;
-  width: 12rem;
+  width: 16rem;
   margin: 0.25rem 0rem;
   /* padding-inline-start: 0.75rem; */
   padding-left: 0.75rem;
