--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -26,6 +26,11 @@
   color: #f4FFFD
 }
 
+.video-overlay p {
+  font-family: 'Lexend', sans-serif;
+  font-weight: 300;
+}
+
 .section-container {
   width: 100%;
   height: 28rem;
@@ -44,4 +49,32 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.animate-characters
+{
+  background-image: linear-gradient(
+    -225deg,
+    #89fc00 0%,
+    #fa824c 29%,
+    #ff5964 67%,
+    #51bbfe 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+      font-size: 3rem;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
 }
