--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -11,7 +11,7 @@
 .navbar {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     padding: 1rem;
     width: 100%;
     height: 4rem;
@@ -20,12 +20,19 @@
     z-index: 1000;
     /* background-color: #ff5964; */
     transition: background-color 0.3s;
+    gap: 2rem;
 }
 
-.nav-auth {
+#nav-auth {
     display: flex;
     align-items: center;
-    width: 30%;
+    /* width: 30%; */
+    /* justify-self: flex-end; */
+    margin-left: auto;
+}
+
+.nav-logo {
+    justify-self: flex-start;
 }
 
 .logo {
@@ -41,4 +48,11 @@
 .discover:hover {
     border-color: #89FC00;
     color: #89FC00;
+}
+
+.nav-links {
+    display: flex;
+    gap: 1rem;
+    /* width: 30%; */
+    justify-self: flex-start;
 }
