--- a/frontend/src/components/SessionForms/LoginForm.css
+++ b/frontend/src/components/SessionForms/LoginForm.css
@@ -67,6 +67,6 @@ input::placeholder {
   font-family: 'Lexend', sans-serif;
   font-weight: 400;
   margin-left: 0.25rem;
-  /* margin-bottom: 0.25rem; */
   margin-top: 0.5rem;
+  color: #F4FFFD;
 }
