--- a/frontend/src/components/DiscoverPage/DiscoverPage.css
+++ b/frontend/src/components/DiscoverPage/DiscoverPage.css
@@ -12,13 +12,14 @@
 }
 
 .filter-container {
-  width: 15%;
+  width: 20%;
   padding: 1rem;
 }
 
 .index-container {
   height: 100%;
-  width: 50%;
+  min-width: 70%;
+  max-width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -35,8 +36,7 @@
   margin-bottom: 2rem;
   height: auto;
   overflow-x: auto;
-  /* width: 30rem; */
-  width: 80%;
+  max-width: 80%;
   white-space: nowrap;
   position: relative;
 }
@@ -88,15 +88,13 @@
 .event-container {
   display: flex;
   align-items: center;
-  /* border-style: solid; */
-  padding: 2rem;
-  /* border-width: 1px; */
-  /* border-color: #9c9c9c; */
+  padding: 1rem;
   margin: 0.5rem 0rem;
-  width: 80%;
-  /* height: 18rem; */
+  min-width: 80%;
+  max-width: 80%;
   border-radius: 1rem;
   transition: box-shadow 0.3s ease;
+  gap: 2rem;
 }
 
 .event-container:hover {
