--- a/frontend/src/components/EventsShow/EventsShow.css
+++ b/frontend/src/components/EventsShow/EventsShow.css
@@ -76,7 +76,7 @@
 .detail-event-inner-left {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 60%;
     margin-right: 1rem;
 }
 
@@ -111,7 +111,7 @@
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
-    align-items: center;
+    align-items: flex-start;
 }
 
 .join-event {
