--- a/frontend/src/components/About/About.css
+++ b/frontend/src/components/About/About.css
@@ -14,6 +14,9 @@
   align-items: center;
 }
 
+.about-team-header h1, h2, h3, p, span {
+    color: #F4FFFD;
+}
 
 .about-team-section {
   width: 95%;
@@ -28,7 +31,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.75rem;
+  gap: 1rem;
   height: auto;
 }
 
