--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,18 +51,18 @@ button {
   width: 6rem;
   height: 2rem;
   border-radius: 3rem;
-  border-style: solid;
-  border-color: #F4FFFD;
-  border-width: 3px;
-  background-color: transparent;
+  border-style: none;
+  /* border-color: #F4FFFD; */
+  /* border-width: 2px; */
+  background: linear-gradient(145deg, rgba(250,130,76,1) 0%, rgba(255,89,100,1) 100%);
   color: #F4FFFD;
-  transition: border-color 0.3s ease, color 0.3s ease;
   font-family: 'Lexend';
+  transition: background 1s ease-in-out;
 }
 
 button:hover {
-  border-color: #89FC00;
-  color: #89FC00;
+  background: linear-gradient(63deg, rgba(81,187,254,1) 0%, rgba(137,252,0,1) 100%);
+  /* color: #89FC00; */
   box-shadow: none;
 }
 
